--- a/submission/k8s/configmap.yaml
+++ b/submission/k8s/configmap.yaml
@@ -1,7 +1,16 @@
-# configmap.yaml — Video Processor Configuration
-#
-# TASK: Create a ConfigMap for the video-processor deployment.
-#
-# Requirements:
-#   - Application configuration values (e.g., log level, Kafka broker, S3 bucket)
-#   - This ConfigMap should be referenced in your deployment.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: video-processor-config
+  namespace: video-analytics
+  labels:
+    app: video-processor
+
+# Application configuration values consumed by the container
+# (log level, broker addresses, bucket names, etc.)
+data:
+  LOG_LEVEL: "INFO"
+  KAFKA_BROKER: "kafka.video-analytics.svc.cluster.local:9092"
+  S3_BUCKET: "vlt-video-chunks-prod"
+  RETRY_COUNT: "3"
+  TIMEOUT_MS: "10000"
