--- a/submission/k8s/deployment.yaml
+++ b/submission/k8s/deployment.yaml
@@ -28,16 +28,59 @@ spec:
       labels:
         app: video-processor
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        fsGroup: 2000
       containers:
       - name: video-processor
-        image: # TODO: Set image with a specific tag (not :latest)
+        image: "123456789012.dkr.ecr.us-east-1.amazonaws.com/video-processor:1.2.3"
         ports:
         - containerPort: 8080
           name: http
-        # TODO: Add resource requests and limits
-        # TODO: Add liveness probe
-        # TODO: Add readiness probe
-        # TODO: Add security context
-        # TODO: Add environment variables (reference ConfigMap)
-      # TODO: Add pod-level security context
-      # TODO: Add anti-affinity or topology spread constraints
+        resources:
+          requests:
+            cpu: "250m"
+            memory: "256Mi"
+          limits:
+            cpu: "1"
+            memory: "1Gi"
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: http
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: http
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+            - ALL
+        envFrom:
+        - configMapRef:
+            name: video-processor-config
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - video-processor
+            topologyKey: "kubernetes.io/hostname"
+      topologySpreadConstraints:
+      - maxSkew: 1
+        topologyKey: "topology.kubernetes.io/zone"
+        whenUnsatisfiable: DoNotSchedule
+        labelSelector:
+          matchLabels:
+            app: video-processor
