--- a/submission/k8s/hpa.yaml
+++ b/submission/k8s/hpa.yaml
@@ -1,8 +1,32 @@
-# hpa.yaml — Horizontal Pod Autoscaler
-#
-# TASK: Create an HPA for the video-processor deployment.
-#
-# Requirements:
-#   - Min and max replica counts
-#   - CPU and/or memory metrics with target utilization
-#   - Consider: what scaling behavior makes sense for a video processing workload?
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: video-processor-hpa
+  namespace: video-analytics
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: video-processor
+  minReplicas: 3
+  maxReplicas: 10
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 60
+  behavior:
+    scaleUp:
+      stabilizationWindowSeconds: 60
+      policies:
+      - type: Percent
+        value: 100
+        periodSeconds: 60
+    scaleDown:
+      stabilizationWindowSeconds: 300
+      policies:
+      - type: Percent
+        value: 20
+        periodSeconds: 60
