--- a/submission/k8s/networkpolicy.yaml
+++ b/submission/k8s/networkpolicy.yaml
@@ -1,8 +1,35 @@
-# networkpolicy.yaml — Network Policy
-#
-# TASK: Create a NetworkPolicy for the video-processor pods.
-#
-# Requirements:
-#   - Restrict ingress to only necessary sources
-#   - Consider what services need to communicate with the video processor
-#   - Default deny is a good starting point
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: video-processor-policy
+  namespace: video-analytics
+spec:
+  podSelector:
+    matchLabels:
+      app: video-processor
+  policyTypes:
+  - Ingress
+  - Egress
+  ingress:
+  - from:
+    - podSelector:
+        matchLabels:
+          app: kafka
+    - podSelector:
+        matchLabels:
+          app: cache
+    ports:
+    - protocol: TCP
+      port: 9092
+    - protocol: TCP
+      port: 80
+  egress:
+  - to:
+    - namespaceSelector:
+        matchLabels:
+          name: default
+    ports:
+    - protocol: TCP
+      port: 443
+
+# default deny all other traffic, enforced by absence of allow rules elsewhere
